# propfair

./: .env.example  .gitignore  CLAUDE.md  IDEA.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/propfair_api/: auth.py  config.py  database.py  main.py  models.py
apps/api/src/propfair_api/routers/: __init__.py  analysis.py  auth.py  favorites.py  listings.py
apps/api/src/propfair_api/schemas/: analysis.py  auth.py  listing.py
apps/api/tests/: test_config.py  test_database.py  test_listings_router.py  test_models.py
apps/web/: Dockerfile  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/components/listings/: ListingCard.tsx  ListingFilters.tsx
apps/web/src/components/map/: MapContainer.tsx
apps/web/src/lib/: api.ts
docs/plans/: 2026-01-07-propfair-design.md  2026-01-07-slice-1-bogota-apartments.md  2026-01-09-database-integration-scraper-design.md  2026-01-09-database-integration-scraper.md
infra/docker/: docker-compose.yml
